--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,11 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url("../imgs/background1.jpg");
-  background-color: #cccccc;
-  background-size: cover;
+  background: linear-gradient(
+    180.3deg,
+    rgb(221, 221, 221) 5.5%,
+    rgb(110, 136, 161) 90.2%
+  );
+  background-attachment: fixed;
 }
 
 h1 {
