--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Jost", sans-serif;
   background: linear-gradient(
     180.3deg,
     rgb(221, 221, 221) 5.5%,
