increased top margin of main container

--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,10 @@ li::first-letter {
   text-transform: capitalize;
 }
 
+.container {
+  margin-top: 100px;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
